tests/spec/build/snapshots/multimodule_tuple_struct_field_access.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/types"

func getRawId(id types.UserId) int {
	return int(id)
}

func getX(p types.Point) int {
	return p.F0
}

func main() {
	id := types.UserId(42)
	p := types.Point{
		F0: 10,
		F1: 20,
	}
	pair := types.Pair[int, string]{
		F0: 1,
		F1: "hello",
	}
	_ = getRawId(id) + getX(p) + pair.F0
}


// === types/lib.go ===
package types

type UserId int

type Point struct {
	F0 int
	F1 int
}

type Pair[A any, B any] struct {
	F0 A
	F1 B
}
