tests/spec/build/snapshots/multimodule_type_alias_field_access.snap
---
source: tests/spec/build/mod.rs
---
// === geo/lib.go ===
package geo

type Point struct {
	X int
	Y int
}

type Coordinate = Point


// === main.go ===
package main

import "github.com/user/myproject/geo"

func getX(c geo.Coordinate) int {
	return c.X
}

func main() {
	c := geo.Point{
		X: 10,
		Y: 20,
	}
	_ = getX(c)
}
