tests/spec/build/snapshots/multipackage_cross_package_enum_usage.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/shapes"

func describe(s shapes.ShapeKind) float64 {
	if s.Tag == shapes.ShapeKindCircleKind {
		return s.CircleKind.Radius
	}
	return s.Width * s.Height
}

func main() {
	circle := shapes.Circle{Radius: 5.0}
	shape := shapes.MakeShapeKindCircleKind(circle)
	describe(shape)
}


// === shapes/lib.go ===
package shapes

func MakeShapeKindCircleKind(arg0 Circle) ShapeKind {
	return ShapeKind{Tag: ShapeKindCircleKind, CircleKind: arg0}
}

func MakeShapeKindRectKind(arg0 float64, arg1 float64) ShapeKind {
	return ShapeKind{Tag: ShapeKindRectKind, Width: arg0, Height: arg1}
}

type Circle struct {
	Radius float64
}

type ShapeKindTag uint8

const (
	ShapeKindCircleKind ShapeKindTag = iota
	ShapeKindRectKind
)

type ShapeKind struct {
	Tag        ShapeKindTag
	CircleKind Circle
	Width      float64
	Height     float64
}
